Scrollbar changed correctly

--- a/static/css/trip-details.css
+++ b/static/css/trip-details.css
@@ -12,7 +12,7 @@
     height: 10px;
 }
 .date-tables::-webkit-scrollbar-thumb {
-    background: purple;
+    background: #8fbf97;
     border-radius: 10px;
     box-shadow: inset 2px 2px 2px #8fbf97 (0,0%,100%,.25), inset -2px -2px 2px rgba(0, 0, 0, 0.25);
 }
