--- a/static/css/user-profile.css
+++ b/static/css/user-profile.css
@@ -21,7 +21,7 @@
     height: 10px;
 }
 .up-trips-list::-webkit-scrollbar-thumb {
-    background: purple;
+    background: #779867;
     border-radius: 10px;
     box-shadow: inset 2px 2px 2px #779867 (0,0%,100%,.25), inset -2px -2px 2px rgba(0, 0, 0, 0.25);
 }
@@ -40,7 +40,7 @@
     height: 10px;
 }
 .all-past-trips::-webkit-scrollbar-thumb {
-    background: purple;
+    background: #158a8b;
     border-radius: 10px;
     box-shadow: inset 2px 2px 2px #158a8b (0,0%,100%,.25), inset -2px -2px 2px rgba(0, 0, 0, 0.25);
 }
@@ -59,7 +59,7 @@
     height: 10px;
 }
 .shared-up::-webkit-scrollbar-thumb {
-    background: purple;
+    background: #ee89d8;
     border-radius: 10px;
     box-shadow: inset 2px 2px 2px #ee89d8 (0,0%,100%,.25), inset -2px -2px 2px rgba(0, 0, 0, 0.25);
 }
@@ -78,7 +78,7 @@
     height: 10px;
 }
 .shared-past::-webkit-scrollbar-thumb {
-    background: purple;
+    background: #fea484;
     border-radius: 10px;
     box-shadow: inset 2px 2px 2px #fea484 (0,0%,100%,.25), inset -2px -2px 2px rgba(0, 0, 0, 0.25);
 }
